--- a/mywebsiteproject/gallery.html
+++ b/mywebsiteproject/gallery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
    <head>
       <title>Gallery</title>
       <link rel="stylesheet" href="assets/css/Style.css">
