--- a/mywebsiteproject/produkt.html
+++ b/mywebsiteproject/produkt.html
@@ -33,6 +33,7 @@
      
       <main>
          <section class="smallSection">
+            <h3 class="Paragraph_title_small">Subway - a place for everyone</h3>
             <div class="grid_container_small">
                <article>
                   <h3 class="Paragraph_title_small ">cant eat meat becuse of religious reasons</h3>
